syntax = "proto2";

package client;

import "google/protobuf/duration.proto";
import "cloud/disk_manager/internal/pkg/logging/config/config.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/configs/client/config";

////////////////////////////////////////////////////////////////////////////////

message ClientConfig {
    required string Endpoint = 1;
    optional uint32 MaxRetryAttempts = 2 [default = 10];
    optional string PerRetryTimeout = 3 [default = "5s"];
    optional string BackoffTimeout = 4 [default = "1s"];
    optional string OperationPollPeriod = 5 [default = "1s"];
    optional string ServerCertFile = 6;
    optional string IAMTokenFile = 7;
    optional bool DisableAuthentication = 8;
    optional bool Insecure = 9;
    required logging.LoggingConfig LoggingConfig = 10;
}
